website/mkdocs/docs/stylesheets/extra.css
/* ... */
.md-typeset .explore-content .explore-content-grid-container>.card:hover {
	color: var(--md-typeset-color);
}

.explore-content h2 {
	font-size: 0.85rem;
	margin-top: 0;
}

.explore-content .font-normal {
	font-size: 0.65rem;
	line-height: 1.25rem;
	padding-right: 1rem;
}

/* Home page explore content section ends */


/* Examples page Gallery section starts */
.examples-gallery-container h5{
    font-weight: bold;
}
.examples-gallery-container .gallery-cards {
    display: grid;
    column-gap: 1rem;
    grid-template-columns: repeat(3, minmax(0, 1fr));
}

.examples-gallery-container .card {
    transition: all 0.3s ease;
    border: 1px solid #e8e8e8;
    border-radius: 4px;
    cursor: pointer;
    overflow: hidden;
    display: flex;
}

.examples-gallery-container p{
    font-size: 0.6rem;
    margin-top: 0.25rem;
    line-height: 1.5;
    text-align: left;
}

.examples-gallery-container .card {
    transition: all 0.3s ease;
    border: 1px solid #e8e8e8;
    border-radius: 4px;
    cursor: pointer;
    overflow: hidden;
    display: flex;
    margin: 10px 0px;
}
.examples-gallery-container .card-container {
    padding: 1rem;
    flex:1;
    text-align: center;
}

.examples-gallery-container .card-image {
    height: 150px;
    width: fit-content;
    margin: auto;
}

.examples-gallery-container .card-description {
    color: #595959;
    display: -webkit-box;
    line-clamp: 3;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
}

.examples-gallery-container .card:hover {
    box-shadow: 0 1px 2px -2px rgba(0, 0, 0, 0.16),
                0 3px 6px 0 rgba(0, 0, 0, 0.12),
                0 5px 12px 4px rgba(0, 0, 0, 0.09);
}

.examples-gallery-container .card-title {
    margin: 12px 0;
    display: -webkit-box;
    line-clamp: 4;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    font-size: 0.7rem;
    font-weight: bold;
}

.examples-gallery-container .card .px-6.py-5 {
    padding: 0;
    height: 100%;
}

.examples-gallery-container .card .px-6.py-5 > div,
.examples-gallery-container .card .px-6.py-5 > div > div,
.examples-gallery-container .card .px-6.py-5 > div > div > div.card-container
{
    height: 100%;
}

.examples-gallery-container .tags-container {
    text-align: left;
}

.examples-gallery-container .tag {
    display: inline-block;
    background: #f5f5f5;
    padding: 0 12px;
    border-radius: 12px;
    font-size: 0.7rem;
    color: #595959;
    cursor: pointer;
    transition: background-color 0.2s;
    margin: 0.35rem 0.1rem 0 0;
    font-size: 0.55rem;
}

.examples-gallery-container .badges{
    display: inline-block;
    text-align: left;
}

.examples-gallery-container .badges a{
    display: inline-block;
}
.examples-gallery-container .badges p.hidden {
    display: none;
}
.examples-gallery-container .tag:hover {
    background-color: #e0e0e0;
}

.examples-gallery-container .chosen-container-multi .chosen-choices {
    margin-left: 0;
}

.examples-gallery-container .chosen-container-multi .chosen-choices li.search-field {
    padding: 0px !important;
    margin: 0px !important;
}

.examples-gallery-container .chosen-container-multi .chosen-choices li.search-field::before,
.examples-gallery-container .chosen-container-multi .chosen-drop .chosen-results .active-result::before,
.examples-gallery-container .chosen-container-multi .chosen-drop .chosen-results .result-selected::before,
.examples-gallery-container .chosen-container-multi .chosen-choices li.search-choice::before {
    display: none;
}

.examples-gallery-container .chosen-container-multi .chosen-choices li.search-choice,
.examples-gallery-container .chosen-container-multi .chosen-drop .chosen-results .active-result,
.examples-gallery-container .chosen-container-multi .chosen-drop .chosen-results .result-selected {
    padding-left: 5px !important;
    margin-left: 0px;
}

.examples-gallery-container .search-choice-close {
    border-bottom: none;
}

/* Examples page Gallery section ends */

/* Blog page section starts */
.blog-authors {
    margin: 1rem 0 1rem 0;
}
.blog-authors .px-6.py-5{
    padding:0.35rem 0;
}

.blog-authors .card-group {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
}
.blog-authors .card {
    display: flex;
    padding: 0;
    margin: 0 0.2rem 0.2rem 0;
    justify-content: flex-start;
    background: none;
    border: none;
}
.blog-authors .card img {
    max-width: 60px;
    height: auto;
    border-radius: 50%;
}
.blog-authors p {
    font-weight: 300;
    margin: 0;
}
.blog-authors p.name, .blog-authors p.authors {
    font-weight: 700;
}
.blog-authors p.authors {
    margin: 0.5rem 0;
}
.blog-authors .img-placeholder {
    margin-right: 1rem;
}
  /* Blog page section ends */

.hide-edit-link {
    display: none;
}

.md-footer {
    margin-top: 3rem;
}

/* User Story Page Starts */
.user-story-youtube-container {
position: relative;
width: 100%;
padding-bottom: 56.25%; /* 16:9 aspect ratio */
height: 0;
overflow: hidden;
border-radius: 8px; /* optional rounded corners */
margin: 0.75rem 0;
}

.user-story-youtube-container iframe {
position: absolute;
top: 0;
left: 0;
width: 100%;
height: 100%;
border: 0;
}
/* User Story Page Ends */

